Add Excel Report

--- a/src/app/routes/expediente/expediente-show/expediente-show.component.html
+++ b/src/app/routes/expediente/expediente-show/expediente-show.component.html
@@ -50,6 +50,7 @@
           </mat-list-item>
           <mat-divider></mat-divider>
         }
+        <p>{{expediente.observacion}}</p>
       </mat-list>
 
   </mat-card-content>
